rectify api user/adbkeys
