# lib/units/api/controllers/user.js
@@ -494,10 +494,10 @@ function getUserAccessTokens(req, res) {
       })
     })
 }
-
+ 
 function addAdbPublicKey(req, res) {
   var data = req.swagger.params.adb.value
-  adbkit.util.parsePublicKey(data.publickey)
+  adbkit.util.parsePublicKey(data.adb_key)
     .then(function(key) {
       return dbapi.lookupUsersByAdbKey(key.fingerprint)
         .then(function(cursor) {
@@ -541,9 +541,10 @@ function addAdbPublicKey(req, res) {
       })
     }).catch(function(err) {
       log.error('Failed to insert new adb key fingerprint: ', err.stack)
+
       return res.status(500).json({
         success: false
-      , message: 'Unable to insert new adb key fingerprint to database'
+      , message: 'Unable to insert new adb key fingerprint to database: ' + err.message
       })
     })
 }
